--- a/libs/ui-components/src/landing-page/toolbar/toolbar.component.html
+++ b/libs/ui-components/src/landing-page/toolbar/toolbar.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="header-toolbar__right">
     <div class="header-toolbar__menu">
-      <button class="header-toolbar__primary__btn">
+      <button mat-button class="header-toolbar__primary__btn">
         <span>{{ 'toolbar.SIGNIN' | transloco }}</span>
       </button>
       <button mat-button class="header-toolbar__secondary__btn">
