--- a/libs/ui-components/src/landing-page/toolbar/toolbar.component.scss
+++ b/libs/ui-components/src/landing-page/toolbar/toolbar.component.scss
@@ -83,7 +83,7 @@ $shadow-color: rgba(0, 0, 0, 0.2);
 
   &__secondary__btn {
     color: var(--mat-sys-on-primary);
-    background-color: var(--mat-sys-on-background);
+    background-color: var(--mat-sys-on-primary-container);
     border: 1px solid var(--mat-sys-outline);
   }
 
