--- a/apps/iaimc-frontend/src/app/app.component.html
+++ b/apps/iaimc-frontend/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-toolbar />
-<div class="outlet">
-  <router-outlet />
+<div>
+  <app-toolbar />
+  <div class="outlet">
+    <router-outlet />
+  </div>
 </div>
