--- a/apps/iaimc-frontend/src/app/app.component.scss
+++ b/apps/iaimc-frontend/src/app/app.component.scss
@@ -1,4 +1,4 @@
 .outlet {
-  height: calc(100vh - var(--toolbar-height) - var(--navbar-height));
+  height: calc(100vh - var(--toolbar-height));
   overflow-y: scroll;
 }
