refactor(frontend): refator to use reusable components

--- a/libs/ui-components/src/reusable-components/reusable-form-field/reusable-form-field.component.scss
+++ b/libs/ui-components/src/reusable-components/reusable-form-field/reusable-form-field.component.scss
@@ -6,7 +6,7 @@
 mat-form-field {
   width: 100%;
   .footer {
-    color: var(--subscription-primary-color) !important;
+    color: $subscription-primary-color !important;
   }
   &.telephone {
     width: var(--telephone-width, 100%);
