--- a/libs/ui-components/src/landing-page/material-selection/material-selection.component.scss
+++ b/libs/ui-components/src/landing-page/material-selection/material-selection.component.scss
@@ -4,6 +4,7 @@
 .material-selection {
   padding: 20px;
   background-color: $mat-selection-background-color;
+  width: 100%;
 
   &__title {
     text-align: center;
@@ -15,7 +16,8 @@
   &__grid {
     @include flex-center;
     flex-wrap: wrap;
-    gap: 20px;
+    width: 100%;
+    gap: 9%;
   }
 }
 
@@ -74,6 +76,7 @@
   .material-selection__grid {
     flex-direction: column;
     align-items: center;
+    padding: 0 0.5rem;
   }
 
   .material-card {
