chore: apply prettier to files

--- a/libs/ui-components/src/materials/components/material-info-dialog/material-info-dialog.component.html
+++ b/libs/ui-components/src/materials/components/material-info-dialog/material-info-dialog.component.html
@@ -4,7 +4,7 @@
       {{ material.name }}
     </header>
 
-    <mat-dialog-content>
+    <mat-dialog-content tabindex="0">
       <h3>{{ 'materialInfoDialog.GENERAL_PROPERTIES' | transloco }}</h3>
       <div class="properties_grid">
         <div class="key">{{ 'materialInfoDialog.DENSITY' | transloco }}:</div>
