chore: uncomment ssl

--- a/libs/ui-components/src/materials/components/material-info-dialog/material-info-dialog.component.scss
+++ b/libs/ui-components/src/materials/components/material-info-dialog/material-info-dialog.component.scss
@@ -63,8 +63,11 @@ main {
       }
     }
 
-    @include mat.table-overrides((background-color: white,
-      ));
+    @include mat.table-overrides(
+      (
+        background-color: white,
+      )
+    );
 
     .resistance-icons {
       text-align: center;
