--- a/apps/iaimc-frontend/src/app/customer/landing-page/landing-page.component.html
+++ b/apps/iaimc-frontend/src/app/customer/landing-page/landing-page.component.html
@@ -1,3 +1,4 @@
 <app-stage></app-stage>
 <app-model-upload></app-model-upload>
+<app-how-it-works></app-how-it-works>
 <app-material-selection></app-material-selection>
