refactor(frontend): center spinner

--- a/libs/ui-components/src/materials/materials.component.html
+++ b/libs/ui-components/src/materials/materials.component.html
@@ -1,5 +1,7 @@
 @if (loading()) {
-  <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+  <div class="loading-container">
+    <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+  </div>
 } @else {
   <div class="material-grid">
     @for (material of materials(); track material.id) {
