--- a/libs/ui-components/src/materials/materials.component.scss
+++ b/libs/ui-components/src/materials/materials.component.scss
@@ -8,6 +8,15 @@ $material-card-hover-box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 $material-header-height: 10px;
 $tolerance-container-bg: #f5f3f3;
 
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  min-height: 200px;
+}
+
 mat-icon {
   position: absolute;
   top: 10px;
