feat(frontend): add mobile responsiveness and adjust components

--- a/libs/ui-components/src/contact-form/contact-form.component.html
+++ b/libs/ui-components/src/contact-form/contact-form.component.html
@@ -139,9 +139,9 @@
           contactForm.get('agreement')?.touched &&
           contactForm.get('agreement')?.hasError('required')
         ) {
-          <p class="terms-error">
+          <mat-error class="terms-error">
             You must accept the data protection regulations
-          </p>
+          </mat-error>
         }
 
         <div class="form-btns">
