--- a/libs/ui-components/src/reusable-components/reusable-button/reusable-button.component.html
+++ b/libs/ui-components/src/reusable-components/reusable-button/reusable-button.component.html
@@ -4,6 +4,7 @@
     [class]="className"
     [type]="type"
     [disabled]="disabled"
+    [attr.aria-label]="ariaLabel || ''"
     (click)="buttonClick.emit($event)"
   >
     <ng-content></ng-content>
@@ -14,6 +15,7 @@
     [class]="className"
     [type]="type"
     [disabled]="disabled"
+    [attr.aria-label]="ariaLabel || ''"
     (click)="buttonClick.emit($event)"
   >
     <ng-content></ng-content>
@@ -24,6 +26,7 @@
     [class]="className"
     [type]="type"
     [disabled]="disabled"
+    [attr.aria-label]="ariaLabel || ''"
     (click)="buttonClick.emit($event)"
   >
     <ng-content></ng-content>
