--- a/libs/ui-components/src/landing-page/schedule-call/schedule-call.component.html
+++ b/libs/ui-components/src/landing-page/schedule-call/schedule-call.component.html
@@ -7,9 +7,20 @@
       <p class="option-description">
         {{ 'cta.SCHEDULE.DESCRIPTION' | transloco }}
       </p>
-      <button mat-flat-button class="action-button" (click)="openContactForm()">
-        {{ 'cta.SCHEDULE.BUTTON' | transloco }}
-      </button>
+      <app-reusable-button
+        [className]="'upload-button'"
+        [color]="'primary'"
+        [isInFooter]="true"
+        (buttonClick)="openContactForm()"
+        [styles]="{
+          'background-color': 'var(--mat-sys-on-primary-container)',
+          color: 'white',
+          'border-radius': '25px',
+          'font-weight': 'semi-bold',
+        }"
+      >
+        <span>{{ 'cta.SCHEDULE.BUTTON' | transloco }}</span>
+      </app-reusable-button>
     </div>
 
     <div class="option-card">
@@ -17,14 +28,24 @@
       <p class="option-description">
         {{ 'cta.TRY_IT.DESCRIPTION' | transloco }}
       </p>
-      <button
-        mat-flat-button
-        class="action-button upload-button"
+      <app-reusable-button
+        [className]="'upload-button'"
+        [color]="'primary'"
+        [isInFooter]="true"
         [routerLink]="['/library']"
+        [styles]="{
+          'background-color': 'var(--mat-sys-on-primary-container)',
+          color: 'white',
+          'border-radius': '25px',
+          'font-weight': 'semi-bold',
+          display: 'flex',
+          'align-items': 'start',
+          'justify-content': 'center',
+        }"
       >
-        <span>{{ 'cta.TRY_IT.BUTTON' | transloco }}</span>
+        {{ 'cta.TRY_IT.BUTTON' | transloco }}
         <mat-icon class="arrow-icon">arrow_forward</mat-icon>
-      </button>
+      </app-reusable-button>
     </div>
   </div>
 </div>
