--- a/libs/ui-components/src/styles/_variables.scss
+++ b/libs/ui-components/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $font-size-base: 16px;
 $full: 100%;
 $spacing-unit: 8px;
 $mat-selection-background-color: #f5f5f5;
+$check-icon-color: #2e5235;
 
 $font-size-footer: 0.875rem;
 $footer-links-color: #606060;
